# adrop

./: README.md  pubspec.yaml
.devcontainer/: devcontainer.json
.github/workflows/: Assets.yml  Package.yml
android/: build.gradle
android/app/: build.gradle
integration_test/: simple_test.dart
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/ShareExtension/: Info.plist  ShareExtension-Bridging-Header.h
lib/: cross.dart  main.dart
lib/components/: a_drop_icon.dart  alipan_folder_chooser.dart  common.dart  content_builder.dart  content_error.dart  content_loading.dart  device_type.dart  folder_info.dart  launch_at_startup.dart
lib/configs/: configs.dart  desktop_layout.dart  download_to.dart  screen_keep_on.dart
lib/screens/: app_screen.dart  choose_device_screen.dart  device_edit_screen.dart  download_settings_screen.dart  init_screen.dart  login_screen.dart  receiving_settings_screen.dart  sending_settings_screen.dart  space_choose_screen.dart  space_config_screen.dart  space_device_screen.dart
linux/: CMakeLists.txt  my_application.cc
linux/appimage/: AppRun.desktop
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/html/: index.html  success.html
rust/src/: common.rs  custom_crypto.rs  define.rs  frb_generated.rs  lib.rs  single.rs  utils.rs
rust/src/api/: download.rs  fs.rs  init.rs  mod.rs  nope.rs  property.rs  receiving.rs  sending.rs  single_instance_stream.rs  space.rs  system.rs  user.rs  user_setting.rs
rust/src/data_obj/: enums.rs  mod.rs
rust/src/database/: mod.rs
rust/src/database/properties/: mod.rs  property.rs
rust/src/single_instance/: error.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_adrop.podspec
rust_builder/linux/: CMakeLists.txt
rust_test/: Cargo.toml
rust_test/src/: main.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+36 files in other folders)
