[package]
name = "rust_lib_adrop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
alipan = { version = "0.0.16", default-features = false, features = ["rustls-tls"] }
async-recursion = "1.1.1"
async-trait = "0.1.81"
flutter_rust_bridge = { version = "=2.1.0", features = ["uuid", "chrono", "backtrace", "log"] }
lazy_static = "1.5.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.17"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
